Fix bug when toggling custom fiat payment methods